[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/icons/close.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/shield-lock-outline.png" type="Texture" id=2]
[ext_resource path="res://prefabs/ui/game/planet_details/planet_change_distribution/planet_change_distribution.gd" type="Script" id=3]
[ext_resource path="res://prefabs/ui/game/planet_details/ship_distribution/ship_distribution.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/icons/shield-outline.png" type="Texture" id=5]
[ext_resource path="res://assets/ship_explorer.png" type="Texture" id=6]
[ext_resource path="res://assets/ship_miner.png" type="Texture" id=7]
[ext_resource path="res://assets/ship_combat.png" type="Texture" id=8]

[node name="PlanetChangeDistribution" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ShipDistribution" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 960.0
margin_bottom = 540.0

[node name="Inputs" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Inputs"]
margin_right = 640.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Inputs/MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 616.0
margin_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 13
size_flags_vertical = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer1" type="Control" parent="Inputs/MarginContainer/VBoxContainer"]
margin_right = 592.0
margin_bottom = 53.0
size_flags_vertical = 3

[node name="CombatSlider" type="HSlider" parent="Inputs/MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 592.0
margin_bottom = 73.0
size_flags_vertical = 1
custom_icons/grabber = ExtResource( 8 )
tick_count = 2
ticks_on_borders = true

[node name="Spacer2" type="Control" parent="Inputs/MarginContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 592.0
margin_bottom = 130.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExplorerSlider" type="HSlider" parent="Inputs/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 592.0
margin_bottom = 150.0
size_flags_vertical = 1
custom_icons/grabber = ExtResource( 6 )
ticks_on_borders = true

[node name="Spacer3" type="Control" parent="Inputs/MarginContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 592.0
margin_bottom = 207.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinerSlider" type="HSlider" parent="Inputs/MarginContainer/VBoxContainer"]
margin_top = 211.0
margin_right = 592.0
margin_bottom = 227.0
size_flags_vertical = 1
custom_icons/grabber = ExtResource( 7 )
ticks_on_borders = true

[node name="Spacer4" type="Control" parent="Inputs/MarginContainer/VBoxContainer"]
margin_top = 231.0
margin_right = 592.0
margin_bottom = 284.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Actions" type="HBoxContainer" parent="Inputs"]
margin_top = 336.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnCancel" type="TextureButton" parent="Inputs/Actions"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )

[node name="Control" type="Control" parent="Inputs/Actions"]
margin_left = 28.0
margin_right = 612.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="BtnConfirm" type="TextureButton" parent="Inputs/Actions"]
margin_left = 616.0
margin_right = 640.0
margin_bottom = 24.0
disabled = true
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 2 )
[connection signal="value_changed" from="Inputs/MarginContainer/VBoxContainer/CombatSlider" to="." method="_on_combat_slider_changed"]
[connection signal="value_changed" from="Inputs/MarginContainer/VBoxContainer/ExplorerSlider" to="." method="_on_explorer_slider_changed"]
[connection signal="value_changed" from="Inputs/MarginContainer/VBoxContainer/MinerSlider" to="." method="_on_miner_slider_changed"]
[connection signal="pressed" from="Inputs/Actions/BtnCancel" to="." method="_on_cancel" flags=3]
[connection signal="pressed" from="Inputs/Actions/BtnConfirm" to="." method="_on_confirm" flags=3]
